--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ section {
     padding: .5rem;
     color: white;
     margin-left: .9rem;
-
+    margin-top: -2rem;
     
     align-self: flex-start;
 }
